# analogue-core-template-amaranth-variants

./: README.md  core.json  info.txt  interact.json  video.json
scripts/: build.sh  resolution.py
src/fpga/: ap_core.qsf
src/fpga/amaranth_core/: .gitignore  LICENSE.txt  pyproject.toml
src/fpga/amaranth_core/embed_amaranth_core/: app_toplevel.py  build.py  platform.py  resolution.py  toplevel.py
src/fpga/amaranth_core/my_amaranth_core/: __main__.py  toplevel.py
src/fpga/apf/: build_id.mif
src/fpga/core/: .gitignore  amaranth_core.v  core_bridge_cmd.v  core_constraints.sdc  core_top.v
src/fpga/output_files/: ap_core.jdi  ap_core.rbf  ap_core.sof
