[project]
requires-python = "~=3.8"
dependencies = [
    "amaranth[builtin-yosys] @ git+https://github.com/amaranth-lang/amaranth.git",
]

[tool.pdm.dev-dependencies]
simulation = [
    "pypng"
]

[tool.pdm.scripts]
simulate = {call = "embed_amaranth_core.toplevel:simulate"}
capture_frame = {call = "embed_amaranth_core.toplevel:capture_frame"}
generate = {call = "embed_amaranth_core.toplevel:generate"}
